# aout

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  aout.c  aout.h  test_aout.c
.github/: copilot-instructions.md
.github/workflows/: cmake.yml
ar/: Makefile  ar  main.c
dump/: Makefile  dump  main.c
ld/: Makefile  ld  main.c
strip/: Makefile  main.c  strip
